<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentCadast.gandula">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/primary_text_light_nodisable" />

    <EditText
        android:id="@+id/txtLoginGand"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/digite_seu_login"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/primary_text_light_nodisable"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Senha"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/primary_text_light_nodisable" />

    <EditText
        android:id="@+id/txtSenhaGand"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/digite_sua_senha"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@android:color/primary_text_light_nodisable"
        tools:targetApi="o" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/nome"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/primary_text_light_nodisable" />

    <EditText
        android:id="@+id/txtNomeGand"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_seu_nome"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/primary_text_light_nodisable"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/idade1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/primary_text_light_nodisable" />

    <EditText
        android:id="@+id/txtIdadeGand"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/digite_sua_idade"
        android:importantForAutofill="no"
        android:inputType="datetime"
        android:textColorHint="@android:color/primary_text_light_nodisable"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:text="@string/endere_o"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/primary_text_light_nodisable" />

    <EditText
        android:id="@+id/txtBairroGand"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:hint="@string/digite_seu_endere_o"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/primary_text_light_nodisable"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textViekkkw16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:text="@string/telefone"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/primary_text_light_nodisable" />

    <EditText
        android:id="@+id/txtTelGand"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:ems="10"
        android:hint="@string/digite_seu_telefone"
        android:importantForAutofill="no"
        android:inputType="datetime"
        android:textColorHint="@android:color/primary_text_light_nodisable"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnsalvgandula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="315dp"
        android:text="@string/salvar" />

    <TextView
        android:id="@+id/LikeGand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="280dp"
        android:text="@string/_1"
        android:visibility="invisible" />


</FrameLayout>

