<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentCadast.juiz">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/primary_text_light_nodisable" />

    <EditText
        android:id="@+id/txtLoginJuiz"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/digite_seu_login"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/primary_text_light_nodisable"
        tools:targetApi="o" />


    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Senha"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/primary_text_light_nodisable" />



    <EditText
        android:id="@+id/txtSenhaJuiz"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/digite_sua_senha"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@android:color/primary_text_light_nodisable"
        tools:targetApi="o" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/nome"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/primary_text_light_nodisable" />

    <EditText
        android:id="@+id/txtNomeJuiz"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_seu_nome"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/primary_text_light_nodisable"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/idade1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/primary_text_light_nodisable" />

    <EditText
        android:id="@+id/txtIdadeJuiz"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/digite_sua_idade"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@android:color/primary_text_light_nodisable"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textVie5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:text="@string/string_endere_o"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/primary_text_light_nodisable" />

    <EditText
        android:id="@+id/txtBairroJuiz"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/digite_seu_endere_o"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/primary_text_light_nodisable"
        android:textSize="18sp"
        tools:targetApi="o" />


    <TextView
        android:id="@+id/textVkkw16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="50dp"
        android:text="@string/telefone"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/primary_text_light_nodisable" />

    <EditText
        android:id="@+id/txtTelJuiz"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/digite_seu_telefone"
        android:importantForAutofill="no"
        android:inputType="datetime"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:textColorHint="@android:color/primary_text_light_nodisable"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnsalvjuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:text="@string/salvar" />

    <TextView
        android:id="@+id/LikeJuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="80dp"
        android:text="@string/_1"
        android:visibility="invisible" />

</FrameLayout>