<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CBF436"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nome"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/txtNomeGand1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:text="@string/nome"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>


    <!-- Idade / Bairro -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="67dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/idade"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/txtIdadeGand1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/nome"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


        <TextView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/endere_o"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/txtBairroGand1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/nome"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>

    <!-- Altura / Peso -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/telefone"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/txtTelGand1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="12"
            android:text="@string/nome"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/like"
            android:contentDescription="@string/perfil1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/deslike"
            android:contentDescription="@string/perfil_de_juiz" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/LikeGand1"
            android:layout_width="34dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:text="@string/_0"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/DeslikeGand1"
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:text="@string/_0"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>