<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".Principal.CadastContrat">

    <EditText
        android:id="@+id/txtLoginCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="152dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_seu_login"
        android:inputType="textPersonName"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtSenhaCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:ems="10"
        android:hint="@string/digite_sua_senha"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginCont"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnCont"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="152dp"
        android:text="@string/salvar"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSenhaCont" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="224dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconez" />
</androidx.constraintlayout.widget.ConstraintLayout>