<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallp"
    tools:context=".Principal.TelaCadrast">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="188dp"
        android:text="@string/option"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#ECECEC"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBoleiro"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/jogar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBusc"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/busca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="97dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/boleiro"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#ECECEC"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBoleiro" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="348dp"
        android:text="@string/contratante"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#ECECEC"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>